[gd_scene load_steps=6 format=3 uid="uid://cv2txrgwcfxge"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_ts2qx"]
[ext_resource type="Texture2D" uid="uid://b2oybmscnd415" path="res://pictures/pxfuel.jpg" id="2_rn6qk"]
[ext_resource type="Texture2D" uid="uid://c65kyguqodkjk" path="res://pictures/logo.png" id="3_dcutj"]
[ext_resource type="FontFile" uid="uid://bby4ub4ge7pct" path="res://Pixel Times Bold.ttf" id="4_edfni"]
[ext_resource type="AudioStream" uid="uid://eyxx48h8mit1" path="res://OMORI OST - 001 Title.mp3" id="5_w6q5e"]

[node name="Menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_ts2qx")

[node name="background" type="Sprite2D" parent="."]
process_mode = 3
position = Vector2(960, 540)
texture = ExtResource("2_rn6qk")

[node name="Logo" type="Sprite2D" parent="."]
position = Vector2(965, 523)
scale = Vector2(0.6, 0.6)
texture = ExtResource("3_dcutj")

[node name="Menu" type="VBoxContainer" parent="."]
process_mode = 3
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = -361.0
offset_right = 110.0
offset_bottom = -260.0
grow_vertical = 0
scale = Vector2(3, 3)

[node name="StartButton" type="Button" parent="Menu"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_edfni")
text = "Start"

[node name="OptionsButton" type="Button" parent="Menu"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_edfni")
text = "Options"

[node name="ExitButton" type="Button" parent="Menu"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_edfni")
text = "Exit"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_w6q5e")
volume_db = -19.259
autoplay = true
bus = &"music"

[node name="Label" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 544.0
offset_top = 461.0
offset_right = 1405.0
offset_bottom = 666.0
theme_override_colors/font_color = Color(0.690196, 0.690196, 0.690196, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 10
theme_override_constants/shadow_offset_y = 10
theme_override_fonts/font = ExtResource("4_edfni")
theme_override_font_sizes/font_size = 150
text = "MEMORY"

[node name="Options" type="Control" parent="."]
process_mode = 3
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Options"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -913.0
offset_top = 180.0
offset_right = -849.0
offset_bottom = 234.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(3, 3)

[node name="Video" type="Button" parent="Options/VBoxContainer"]
process_mode = 3
layout_mode = 2
theme_override_fonts/font = ExtResource("4_edfni")
text = "Video"

[node name="Audio" type="Button" parent="Options/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_edfni")
text = "Audio"

[node name="Back" type="Button" parent="Options"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -909.0
offset_top = 355.0
offset_right = -846.0
offset_bottom = 380.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(3, 3)
theme_override_fonts/font = ExtResource("4_edfni")
text = "Back"

[node name="Video" type="Control" parent="."]
process_mode = 3
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Video"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -924.0
offset_top = 185.0
offset_right = -796.0
offset_bottom = 237.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3, 3)

[node name="Labels" type="VBoxContainer" parent="Video/HBoxContainer"]
layout_mode = 2

[node name="Fullscreen" type="Label" parent="Video/HBoxContainer/Labels"]
layout_mode = 2
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("4_edfni")
text = "Fullscreen"

[node name="Borderless" type="Label" parent="Video/HBoxContainer/Labels"]
layout_mode = 2
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("4_edfni")
text = "Borderless"

[node name="VBoxContainer2" type="VBoxContainer" parent="Video/HBoxContainer"]
layout_mode = 2

[node name="Fullscreen" type="CheckBox" parent="Video/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="Borderless" type="CheckBox" parent="Video/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="BackFromVideo" type="Button" parent="Video"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -924.0
offset_top = -189.0
offset_right = -826.0
offset_bottom = -164.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(3, 3)
theme_override_fonts/font = ExtResource("4_edfni")
text = "Back"

[node name="Audio" type="Control" parent="."]
process_mode = 3
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Audio"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.175521
anchor_top = 0.737963
anchor_right = 0.175521
anchor_bottom = 0.737963
offset_left = -296.0
offset_top = -55.0
offset_right = -99.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3, 3)
metadata/_edit_use_anchors_ = true

[node name="Labels" type="VBoxContainer" parent="Audio/HBoxContainer"]
layout_mode = 2

[node name="Master" type="Label" parent="Audio/HBoxContainer/Labels"]
layout_mode = 2
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("4_edfni")
text = "Master"

[node name="Music" type="Label" parent="Audio/HBoxContainer/Labels"]
layout_mode = 2
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("4_edfni")
text = "Music"

[node name="Slider" type="VBoxContainer" parent="Audio/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Master" type="HSlider" parent="Audio/HBoxContainer/Slider"]
layout_mode = 2
size_flags_vertical = 7

[node name="Music" type="HSlider" parent="Audio/HBoxContainer/Slider"]
layout_mode = 2
size_flags_vertical = 7

[node name="SFX" type="HSlider" parent="Audio/HBoxContainer/Slider"]
layout_mode = 2

[node name="BackFromAudio" type="Button" parent="Audio"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -924.0
offset_top = -189.0
offset_right = -826.0
offset_bottom = -164.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(3, 3)
theme_override_fonts/font = ExtResource("4_edfni")
text = "Back"

[connection signal="pressed" from="Menu/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Menu/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="Menu/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="Options/VBoxContainer/Video" to="." method="_on_video_pressed"]
[connection signal="pressed" from="Options/VBoxContainer/Audio" to="." method="_on_audio_pressed"]
[connection signal="pressed" from="Options/Back" to="." method="_on_back_pressed"]
[connection signal="toggled" from="Video/HBoxContainer/VBoxContainer2/Fullscreen" to="." method="_on_fullscreen_toggled"]
[connection signal="toggled" from="Video/HBoxContainer/VBoxContainer2/Borderless" to="." method="_on_borderless_toggled"]
[connection signal="pressed" from="Video/BackFromVideo" to="." method="_on_back_from_video_pressed"]
[connection signal="value_changed" from="Audio/HBoxContainer/Slider/Master" to="." method="_on_master_value_changed"]
[connection signal="value_changed" from="Audio/HBoxContainer/Slider/Music" to="." method="_on_music_value_changed"]
[connection signal="value_changed" from="Audio/HBoxContainer/Slider/SFX" to="." method="_on_sfx_value_changed"]
[connection signal="pressed" from="Audio/BackFromAudio" to="." method="_on_back_from_audio_pressed"]
